[gd_scene load_steps=2 format=3 uid="uid://c32qenhw56whd"]

[ext_resource type="Script" path="res://UI/ending.gd" id="1_igm15"]

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_igm15")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndingTexet" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer/HBoxContainer/EndingTexet"]
one_shot = true

[node name="CharacterTimer" type="Timer" parent="CanvasLayer/HBoxContainer/EndingTexet"]

[node name="Spacer2" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="timeout" from="CanvasLayer/HBoxContainer/EndingTexet/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/HBoxContainer/EndingTexet/CharacterTimer" to="." method="_on_character_timer_timeout"]
